# Group34

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  index.node  package-lock.json  package.json  prova.js  script.txt
backend/: Cargo.toml  Dockerfile  index.js  package-lock.json  package.json  pyproject.toml
backend/rust-project/: Cargo.toml
backend/rust-project/src/operations/: conv.rs  utils.rs
backend/src/: lib.rs  main.rs  onnx_running_environment.rs  stateful_backend_environment.rs  utils.rs
backend/src/backend_state/: state.json
backend/src/operations/: add.rs  batch_norm.rs  concat.rs  conv.rs  dropout.rs  exp.rs  flatten.rs  gemm.rs  global_average_pool.rs  lrn.rs  matmul.rs  maxpool.rs  reducesum.rs  relu.rs  reshape.rs  softmax.rs  utils.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  D3Graph.js  Graph.js  ModifyNodeModal.js  NeuralNetwork.js  RectangularNode.js  RunModal.js  RunResultModal.js  SelectInputOutput.js  TreeVisualization.js  styles.css
nginx/: default.conf
prova/: package-lock.json
prova/backend/: index.js  index.node  package.json
prova/backend/src/: onnx.rs  onnx_running_environment.rs
prova/backend/src/googlenet/data_googlenet/: output_0.pb
prova/backend/src/mobilenet/data_mobilenet/: input_0.pb
prova/backend/src/operations/: add.rs  dropout.rs  mod.rs  softmax.rs
prova/cpu-count/: index.node  package-lock.json
prova/cpu-count/src/: main.rs
prova/cpu-count/src/operations/: batch_norm.rs
script/: esecuzione python mac.txt  esecuzione python windows.txt
src/: ex.txt  main.rs  moduli_general.rs  onnx_running_environment.rs  stateful_backend_environment.rs  utils.rs
src/googlenet/data_googlenet/: input_0.pb
src/mobilenet/data_mobilenet/: output_0.pb
src/operations/: add.rs  batch_norm.rs  concat.rs  conv.rs  dropout.rs  exp.rs  flatten.rs  gemm.rs  global_average_pool.rs  global_avg_pool.rs  lrn.rs  matmul.rs  maxpool.rs  mod.rs  moduli.rs  reducesum.rs  relu.rs  reshape.rs  softmax.rs  utils.rs
src/squeezenet/data_squeezenet/: input_0.pb  output_0.pb
