[package]
name = "Group34"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
ndarray = "0.15.6"
ndarray-image = "0.3.0"
protobuf = "3.2.0"
protoc = "2.28.0"
tract-onnx = "0.20.7"
prost = "0.11.8"
prost-types = "0.11.8"
rand = "0.8.5"
num-traits = "0.2.14"


[build-dependencies]
prost-build = "0.11.8"





