[package]
name = "group_34"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
ndarray = "0.15.6"
ndarray-image = "0.3.0"
protobuf = "3.2.0"
protoc = "2.28.0"
tract-onnx = "0.20.7"
prost = "0.11.8"
prost-types = "0.11.8"
rand = "0.8.5"
num-traits = "0.2.14"
rayon = "1.7.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19.2", features = ["extension-module"], optional = false }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[build-dependencies]
prost-build = "0.11.8"